Fixed more path-to-url conversions